--- a/css/user.css
+++ b/css/user.css
@@ -59,7 +59,7 @@
     font-weight: bold;
     padding: 14px;
     margin: 10px;
-    
+    text-decoration: none;
     border: 1px solid black;
     border-radius:5px ;
     cursor: pointer;
