--- a/css/login.css
+++ b/css/login.css
@@ -58,6 +58,12 @@ h3 {
    margin: 15px;
 }
 
+.loginError {
+    text-align: center;
+    font-style: italic;
+    color: red;
+}
+
 .input {
     width: 100%;
     padding: 8px;
