--- a/css/tables.css
+++ b/css/tables.css
@@ -3,7 +3,8 @@
     height: 300px;
     margin: 15px;
     border-radius: 5px;
-    border: 1px solid;    
+    border: 1px solid; 
+      
 }
 
 .table table {
@@ -13,6 +14,7 @@
 
 .table table td, th {
     border: 1px solid;
+    text-align: center;
 }
 
 
