--- a/css/popup.css
+++ b/css/popup.css
@@ -26,7 +26,7 @@
 }
 
 .popup {
-    background-color:  #a6d4a5; 
+    background-color:  #2E9256; 
     box-shadow: 0px 0px 5px 0px rgba (0.0.0.0.3);
     border: solid 1px black;
     border-radius: 3px;
