--- a/css/tables.css
+++ b/css/tables.css
@@ -1,5 +1,5 @@
-.table {
-    background-color:  #a6d4a5;
+.content-table {
+    background-color:   #a6d4a5;
     height: 480px;
     margin: 15px;
     border-radius: 5px;
@@ -7,16 +7,23 @@
       
 }
 
-.table table {
+.content-table table {
     width: 100%;
     border-collapse: collapse;
 }
 
-.table table td, th {
+.content-table table th {
     border: 1px solid;
     text-align: center;
+    background-color:#0d7728f5;
+    color: black;
 }
 
+.content-table table td {
+    border: 1px solid;
+    text-align: center;
+    font-weight: bold;       
+}
 
 .btn-modi {
     text-decoration: none;
@@ -47,3 +54,4 @@
     text-decoration: none;
     font-weight: bold;
 }
+
